--- a/Crafted-with-devotion-es.html
+++ b/Crafted-with-devotion-es.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <style>
-    #map {
+    #leaflet-map {
       width: 100%;
       height: 600px;
       margin: 1rem 0;
