--- a/Crafted-with-devotion.html
+++ b/Crafted-with-devotion.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
 <style>
-    #map {
+    #leaflet-map {
       width: 100%;
       height: 600px;
       margin: 1rem 0;
@@ -161,7 +161,7 @@
     <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  const map = L.map('leaflet-map').setView([-4.5, -73.5], 7);
+  const map = L.map('leaflet-map').setView([-4.5, -73.5], 9);
 
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '&copy; OpenStreetMap contributors'
