--- a/our-story.html
+++ b/our-story.html
@@ -54,7 +54,7 @@
                 <!-- flex box-->
                 <div class="ourstory">
                     <div class="about-image2">
-                        <img src="Images/FotoOlga.jpg" alt="GSM" class="olga-image">
+                        <img src="Images/FotoOlga.jpg" class="olga-image">
                     </div>
                     <div class="about-ourstory">
                     <p>We train communities in traditional methods of gathering and processing natural resources, promoting environmental conservation, and ensuring dignified and stable incomes for every artisan. Every piece born from Shaju tells a story of identity, resilience, and hope.</p>
@@ -133,11 +133,10 @@
                         <img src="./Images/slippers.jpg" alt="Slippers out of Chambira">
                         <div class="slide-caption">Flipflops made with chambira, seeds, and rubber (resin from the shiringa tree).</div>
                     </div>
-
-                </div>
-                                <!-- Navigation arrows -->
                 <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
                 <a class="next" onclick="changeSlide(1)">&#10095;</a>
+                </div>
+                                <!-- Navigation arrows -->
                 
                 <!-- Dots/circles -->
                 <div class="dots-container">
