save local changes

--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
             <div class="featured-items">
                 <div class="item">
                     <div class="item-img product1-img"></div>
-                    <h3>Handcrafted hat</h3>
-                    <p>Intricately designed with sustainable materials</p>
+                    <h3>Earrings</h3>
+                    <p></p>
                 </div>
                 <div class="item">
                     <div class="item-img product2-img"></div>
-                    <h3>Peruvian slippers</h3>
-                    <p>Each piece crafted with care</p>
+                    <h3>Wallet </h3>
+                    <p>Made with care</p>
                 </div>
                 <div class="item">
                     <div class="item-img product3-img"></div>
-                    <h3>Cute clutch</h3>
-                    <p>Carry a piece of Peru with you </p>
+                    <h3>Slippers</h3>
+                    <p> </p>
                 </div>
 
             </div>
