--- a/index-es.html
+++ b/index-es.html
@@ -54,18 +54,18 @@
             <div class="featured-items">
                 <div class="item">
                     <div class="item-img product1-img"></div>
-                    <h3>Sombrero hecho a mano</h3>
-                    <p>Diseñado meticulosamente con materiales sostenibles.</p>
+                    <h3>Aretes</h3>
+                    <p>Hechos de chambira, estos pendientes realzarán cualquier conjunto.</p>
                 </div>
                 <div class="item">
                     <div class="item-img product2-img"></div>
-                    <h3>Pantuflas peruanas</h3>
-                    <p>Cada pieza elaborada con esmero.</p>
+                    <h3>Cartera</h3>
+                    <p>Paga con estilo con esta cartera hecha de vinilo y chambira.</p>
                 </div>
                 <div class="item">
                     <div class="item-img product3-img"></div>
-                    <h3>Cartera de mano adorable</h3>
-                    <p>Lleva contigo un pedacito del Perú. </p>
+                    <h3>Pantuflas</h3>
+                    <p>Camina con comodidad con estas pantuflas peruanas.</p>
                 </div>
 
             </div>
