--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
                 <div class="item">
                     <div class="item-img product1-img"></div>
                     <h3>Earrings</h3>
-                    <p></p>
+                    <p>Made from Chambira, these earrings will elevate any outfit</p>
                 </div>
                 <div class="item">
                     <div class="item-img product2-img"></div>
                     <h3>Wallet </h3>
-                    <p>Made with care</p>
+                    <p>Pay in style, with this wallet made from vinyl and Chambira</p>
                 </div>
                 <div class="item">
                     <div class="item-img product3-img"></div>
                     <h3>Slippers</h3>
-                    <p> </p>
+                    <p>Walk comfortably in these Peruvian slippers</p>
                 </div>
 
             </div>
