--- a/Crafted-with-devotion.html
+++ b/Crafted-with-devotion.html
@@ -123,6 +123,9 @@
                     <a href="https://facebook.com/shaju.artesania" target="_blank" class="social-icon">
                         <i class="fab fa-facebook-f"></i>
                     </a>
+                    <a href="https://wa.me/c/51949917932" target="_blank" class="social-icon">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
                 </div>
             </div>
             <div class="footer-links">
