--- a/contact.html
+++ b/contact.html
@@ -84,6 +84,9 @@
                         <a href="https://www.facebook.com/shaju.artesania" target="_blank" class="social-media-icon facebook">
                             <i class="fab fa-facebook-f"></i>
                         </a>
+                        <a href="https://wa.me/c/51949917932" target="_blank" class="social-media-icon whatsapp">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
                     </div>
                 </div>
             </div>
@@ -171,6 +174,9 @@
                     </a>
                     <a href="https://facebook.com/shaju.artesania" target="_blank" class="social-icon">
                         <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://wa.me/c/51949917932" target="_blank" class="social-icon">
+                        <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
             </div>
