--- a/Crafted-with-devotion-es.html
+++ b/Crafted-with-devotion-es.html
@@ -144,7 +144,7 @@
                     <li><a href="terms-of-service.html"> Términos de servicio</a></li>
                     <li><a href="privacy-policy.html"> Política de privacidad</a></li>
                     <li><a href="legal-notice.html"> Aviso legal</a></li>
-                    <li><a href="store-locator.html"> Localizador de tiendas</a></li>
+                    <li><a href="store-locator-es.html"> Localizador de tiendas</a></li>
                 </ul>
             </div>
             <div class="footer-newsletter">
