--- a/store-locator-es.html
+++ b/store-locator-es.html
@@ -121,29 +121,32 @@
             .then(res => res.json())
             .then(stores => {
                 L.geoJSON(stores, {
-                    style: {
-                        color: "#ff80ff",
-                        weight: 2,
-                        fillColor: "#ff80ff",
-                        fillOpacity: 0.4
-                    },
-                    onEachFeature: function (feature, layer) {
-                        const props = feature.properties;
-                        const tooltipContent = `
-                            <strong>${props.name}</strong><br>
-                            <em>${props.address}</em><br>
-                            Horario: ${props.opening_hours}
-                        `;
-                        layer.bindTooltip(tooltipContent, { sticky: true });
-
-                        layer.on("mouseover", function () {
-                            this.setStyle({ fillOpacity: 0.7 });
-                        });
-                        layer.on("mouseout", function () {
-                            this.setStyle({ fillOpacity: 0.4 });
-                        });
-                    }
-                }).addTo(map);
+        pointToLayer: function (feature, latlng) {
+        return L.circleMarker(latlng, {
+            radius: 8,
+            fillColor: "#ff80ff",
+            color: "#ff00ff",
+            weight: 1,
+            opacity: 1,
+            fillOpacity: 0.4
+         });
+         },
+            onEachFeature: function (feature, layer) {
+            const props = feature.properties;
+            const tooltipContent = `
+            <strong>${props.name}</strong><br>
+            <em>${props.address}</em><br>
+            Opening hours: ${props.opening_hours}
+        `   ;
+            layer.bindTooltip(tooltipContent, { sticky: true });
+            layer.on("mouseover", function () {
+            this.setStyle({ fillOpacity: 0.7 });
+            });
+            layer.on("mouseout", function () {
+            this.setStyle({ fillOpacity: 0.4 });
+            });
+            }
+            }).addTo(map);
             });
     </script>
 </body>
