--- a/collection.html
+++ b/collection.html
@@ -544,5 +544,37 @@
             font-style: italic;
         }
     </style>
+    <!-- Add this just before </body> -->
+    <button id="skip-to-bottom"
+    style="
+        position: fixed;
+        bottom: 30px;
+        right: 30px;
+        z-index: 99999;
+        background: var(--primary-color, #e6683c);
+        color: #fff;
+        border: none;
+        border-radius: 50px;
+        padding: 12px 24px;
+        font-size: 1rem;
+        box-shadow: 0 4px 16px rgba(0,0,0,0.12);
+        cursor: pointer;
+        transition: background 0.2s, box-shadow 0.2s, transform 0.2s;
+    ">
+    Skip to bottom of page
+    </button>
+        <style>
+    #skip-to-bottom:hover {
+        background: #c94d1c;
+        box-shadow: 0 8px 24px rgba(0,0,0,0.18);
+        transform: translateY(-2px);
+        transition: var(--transition, 0.2s);
+    }
+    </style>
+    <script>
+    document.getElementById('skip-to-bottom').addEventListener('click', function() {
+        window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
+    });
+    </script>
 </body>
 </html>
