--- a/contact-es.html
+++ b/contact-es.html
@@ -87,7 +87,10 @@
                         </a>
                         <a href="https://wa.me/c/51949917932" target="_blank" class="social-media-icon whatsapp">
                         <i class="fab fa-whatsapp"></i>
-                    </a>
+                        </a>
+                        <a href="mailto:ovidurrizaga@gmail.com" target="_blank" class="social-icon" aria-label="Email">
+                        <i class="fas fa-envelope"></i>
+                        </a>
                     </div>
                 </div>
             </div>
