--- a/index-es.html
+++ b/index-es.html
@@ -120,6 +120,9 @@
                     <a href="https://wa.me/c/51949917932" target="_blank" class="social-icon">
                         <i class="fab fa-whatsapp"></i>
                     </a>
+                    <a href="mailto:ovidurrizaga@gmail.com" target="_blank" class="social-icon" aria-label="Email">
+                    <i class="fas fa-envelope"></i>
+                    </a>
                 </div>
             </div>
             <div class="footer-links">
