--- a/collection-es.html
+++ b/collection-es.html
@@ -135,21 +135,13 @@
                 </ul>
             </div>
             <div class="footer-links">
-                <h3>Informacíon</h3>
+                <h3>Información</h3>
                 <ul>
                     <li><a href="terms-of-service.html"> Términos de servicio</a></li>
                     <li><a href="privacy-policy.html"> Política de privacidad</a></li>
                     <li><a href="legal-notice.html"> Aviso legal</a></li>
                     <li><a href="store-locator-es.html"> Localizador de tiendas</a></li>
                 </ul>
-            </div>
-            <div class="footer-newsletter">
-                <h3>Mantente Actualizado</h3>
-                <p>Suscríbete a nuestro boletín para recibir las últimas novedades y ofertas exclusivas.</p>
-                <form>
-                    <input type="email" placeholder="Tu correo electrónico">
-                    <button type="submit">Suscribirse</button>
-                </form>
             </div>
         </div>
         <div class="footer-bottom">
