--- a/events.html
+++ b/events.html
@@ -57,6 +57,13 @@
 
     <div id="loading-indicator" class="loading-indicator">Loading events...</div>
     <div id="error-message" class="error-message">Failed to load events. Please try again.</div>
+    <section class="custom-orders">
+      <div class="find-retailers">
+          <h3>Register for a workshop</h3>
+          <p>Our hands-on workshops guide you step-by-step as you craft your own pieces alongside our artisans. Registration is available for groups of four or more.</p>
+          <a href="https://wa.me/c/51949917932" class="btn">Register by sending a message through WhatsApp </a>
+      </div>
+  </section>
   </main>
   <footer>
     <div class="footer-content">
