--- a/about-es.html
+++ b/about-es.html
@@ -184,9 +184,9 @@
             <div class="footer-links">
                 <h3>Información</h3>
                 <ul>
-                    <li><a href="terms-of-service.html"> Términos de servicio</a></li>
-                    <li><a href="privacy-policy.html"> Política de privacidad</a></li>
-                    <li><a href="legal-notice.html"> Aviso legal</a></li>
+                    <li><a href="terms-of-service-es.html"> Términos de servicio</a></li>
+                    <li><a href="privacy-policy-es.html"> Política de privacidad</a></li>
+                    <li><a href="legal-notice-es.html"> Aviso legal</a></li>
                     <li><a href="store-locator-es.html"> Localizador de tiendas</a></li>
                 </ul>
             </div>
