--- a/events-es.html
+++ b/events-es.html
@@ -17,17 +17,17 @@
     <div class="header-right">
       <nav class="main-nav">
         <ul class="nav-links">
-          <li><a href="index.html">Inicio</a></li>
+          <li><a href="index-es.html">Inicio</a></li>
           <li class="dropdown">
-            <a href="about.html">Sobre Nosotros</a>
+            <a href="about-es.html">Sobre Nosotros</a>
             <div class="dropdown-content">
-              <a href="our-story.html">Nuestra Historia</a>
-              <a href="Crafted-with-devotion.html">Elaborado con devoción</a>
+              <a href="our-story-es.html">Nuestra Historia</a>
+              <a href="Crafted-with-devotion-es.html">Elaborado con devoción</a>
             </div>
           </li>
-          <li><a href="collection.html">Colección</a></li>
-          <li><a href="events.html" class="active">Eventos</a></li>
-          <li><a href="contact.html">Contacto</a></li>
+          <li><a href="collection-es.html">Colección</a></li>
+          <li><a href="events-es.html" class="active">Eventos</a></li>
+          <li><a href="contact-es.html">Contacto</a></li>
         </ul>
       </nav>
       <!-- Selector de idioma -->
@@ -91,9 +91,9 @@
             <div class="footer-links">
                 <h3>Informacíon</h3>
                 <ul>
-                    <li><a href="terms-of-service.html"> Términos de servicio</a></li>
-                    <li><a href="privacy-policy.html"> Política de privacidad</a></li>
-                    <li><a href="legal-notice.html"> Aviso legal</a></li>
+                    <li><a href="terms-of-service-es.html"> Términos de servicio</a></li>
+                    <li><a href="privacy-policy-es.html"> Política de privacidad</a></li>
+                    <li><a href="legal-notice-es.html"> Aviso legal</a></li>
                     <li><a href="store-locator-es.html"> Localizador de tiendas</a></li>
                 </ul>
             </div>
