--- a/store-locator-es.html
+++ b/store-locator-es.html
@@ -81,20 +81,20 @@
             <div class="footer-links">
                 <h3>Enlaces Rápidos</h3>
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="about.html">Sobre Nosotros</a></li>
-                    <li><a href="collection.html">Colección</a></li>
-                    <li><a href="events.html">Eventos</a></li>
-                    <li><a href="contact.html">Contacto</a></li>
+                    <li><a href="index-es.html">Inicio</a></li>
+                    <li><a href="about-es.html">Sobre Nosotros</a></li>
+                    <li><a href="collection-es.html">Colección</a></li>
+                    <li><a href="events-es.html">Eventos</a></li>
+                    <li><a href="contact-es.html">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-links">
                 <h3>Información</h3>
                 <ul>
-                    <li><a href="terms-of-service.html">Términos de servicio</a></li>
-                    <li><a href="privacy-policy.html">Política de privacidad</a></li>
-                    <li><a href="legal-notice.html">Aviso legal</a></li>
-                    <li><a href="store-locator.html">Localizador de tiendas</a></li>
+                    <li><a href="terms-of-service-es.html">Términos de servicio</a></li>
+                    <li><a href="privacy-policy-es.html">Política de privacidad</a></li>
+                    <li><a href="legal-notice-es.html">Aviso legal</a></li>
+                    <li><a href="store-locator-es.html">Localizador de tiendas</a></li>
                 </ul>
             </div>
         </div>
