--- a/Crafted-with-devotion.html
+++ b/Crafted-with-devotion.html
@@ -166,6 +166,7 @@
             <p>&copy; 2025 Shaju. All Rights Reserved.</p>
         </div>
     </footer>
+    <script src="script.js"></script>
     <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
