--- a/legal-notice.html
+++ b/legal-notice.html
@@ -82,7 +82,7 @@
 
       <h2>2. Responsible Party</h2>
       <p>Site Director: María García<br>
-      Contact: <a href="mailto:ovidurrizaga@gmail.com">ovidurrizaga@gmail.com</a><br>
+      Contact: <a href="mailto:shaju.artesania@gmail.com">shaju.artesania@gmail.com</a><br>
       Phone: +51 9 1234 5678</p>
 
       <h2>3. Hosting Provider</h2>
@@ -104,7 +104,7 @@
 
       <h2>8. Contact Information</h2>
       <p>For legal inquiries, please contact us at:<br>
-      <a href="mailto: ovidurrizaga@gmail.com">ovidurrizaga@gmail.com</a></p>
+      <a href="mailto: shaju.artesania@gmail.com">shaju.artesania@gmail.com</a></p>
     </article>
   </main>
 
@@ -118,6 +118,7 @@
           <a href="https://instagram.com/shaju.artesania" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://facebook.com/shaju.artesania" target="_blank"><i class="fab fa-facebook-f"></i></a>
           <a href="https://wa.me/c/51949917932" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          <a href="mailto:shaju.artesania@gmail.com" target="_blank" class="social-icon"><i class="fas fa-envelope"></i></a>
         </div>
       </div>
       <div class="footer-links">
@@ -138,14 +139,6 @@
           <li><a href="legal-notice.html" >Legal Notice</a></li>
           <li><a href="store-locator.html">Store Locator</a></li>
         </ul>
-      </div>
-      <div class="footer-newsletter">
-        <h3>Stay Updated</h3>
-        <p>Subscribe to our newsletter for the latest updates and exclusive offers.</p>
-        <form>
-          <input type="email" placeholder="Your Email">
-          <button type="submit">Subscribe</button>
-        </form>
       </div>
     </div>
     <div class="footer-bottom">
