--- a/our-story-es.html
+++ b/our-story-es.html
@@ -150,7 +150,7 @@
                 <a href="https://wa.me/c/51949917932" target="_blank" class="social-icon">
                         <i class="fab fa-whatsapp"></i>
                 </a>
-                <a href="mailto:ovidurrizaga@gmail.com" target="_blank" class="social-icon" aria-label="Email">
+                <a href="mailto:shaju.artesania@gmail.com" target="_blank" class="social-icon" aria-label="Email">
                     <i class="fas fa-envelope"></i>
                 </a>
             </div>
