--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -144,7 +144,7 @@
                 <p>We may update this Privacy Policy as needed. Any changes will be posted here with a revised “Last updated” date. Your continued use of the site constitutes acceptance of any changes.</p>
 
                 <h2>8. Contact Us</h2>
-                <p>If you have questions or concerns about this policy, please contact us at <a href="ovidurrizaga@gmail.com">ovidurrizaga@gmail.com</a>.</p>
+                <p>If you have questions or concerns about this policy, please contact us at <a href="shaju.artesania@gmail.com">shaju.artesania@gmail.com</a>.</p>
 
                 <p>Thank you for visiting <strong>[Your Website Name]</strong>. We respect your privacy and are committed to keeping it simple: we don’t collect any of your data—ever.</p>
             </article>
