--- a/contact-es.html
+++ b/contact-es.html
@@ -72,8 +72,8 @@
                 
                 <div class="info-item">
                     <h4>Datos de Contacto</h4>
-                    <p>Email: info@shaju.com</p>
-                    <p>Teléfono: 949 917 932</p>
+                    <p>Email: shaju.artesania@gmail.com</p>
+                    <p>Teléfono: +51 949 917 932</p>
                 </div>
                 
                 <div class="social-links-section">
@@ -180,7 +180,7 @@
                     <a href="https://wa.me/c/51949917932" target="_blank" class="social-icon">
                         <i class="fab fa-whatsapp"></i>
                     </a>
-                    <a href="mailto:ovidurrizaga@gmail.com" target="_blank" class="social-icon" aria-label="Email">
+                    <a href="mailto:shaju.artesania@gmail.com" target="_blank" class="social-icon" aria-label="Email">
                     <i class="fas fa-envelope"></i>
                     </a>
                 </div>
