--- a/privacy-policy-es.html
+++ b/privacy-policy-es.html
@@ -93,7 +93,7 @@
             <p>Podemos actualizar esta Política de Privacidad cuando sea necesario. Cualquier cambio será publicado aquí con la fecha de “Última actualización” revisada. Tu uso continuo del sitio implica aceptación de los cambios.</p>
 
             <h2>8. Contáctanos</h2>
-            <p>Si tienes preguntas o inquietudes, por favor escríbenos a <a href="mailto: ovidurrizaga@gmail.com">ovidurrizaga@gmail.com</a>.</p>
+            <p>Si tienes preguntas o inquietudes, por favor escríbenos a <a href="mailto: shaju.artesania@gmail.com">shaju.artesania@gmail.com</a>.</p>
 
             <p>Gracias por visitar <strong>[Nombre de tu sitio]</strong>. Respetamos tu privacidad y mantenemos las cosas simples: nunca recopilamos tus datos.</p>
         </article>
