--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -110,7 +110,7 @@
       <p>These Terms are governed by the laws of [Your State/Country]. Any dispute shall be resolved exclusively in the courts of [Your Jurisdiction].</p>
 
       <h2>9. Contact Us</h2>
-      <p>If you have questions about these Terms, please email us at <a href="mailto: ovidurrizaga@gmail.com">ovidurrizaga@gmail.com</a>.</p>
+      <p>If you have questions about these Terms, please email us at <a href="mailto: shaju.artesania@gmail.com">shaju.artesania@gmail.com</a>.</p>
     </article>
   </main>
 
