--- a/privacy-policy-es.html
+++ b/privacy-policy-es.html
@@ -102,46 +102,47 @@
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Logotipo Shajú" class="footer-logo-image">
+                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Logo Shaju" class="footer-logo-image">
+                <p>Hecho con pasión para generar un impacto</p>
                 <div class="social-icons">
-                    <a href="https://instagram.com/shaju.artesania" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://facebook.com/shaju.artesania" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://wa.me/c/51949917932" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://facebook.com/shaju.artesania" target="_blank" class="social-icon">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://wa.me/c/51949917932" target="_blank" class="social-icon">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                    <a href="mailto:shaju.artesania@gmail.com" target="_blank" class="social-icon" aria-label="Email">
+                    <i class="fas fa-envelope"></i>
+                    </a>
                 </div>
             </div>
             <div class="footer-links">
                 <h3>Enlaces Rápidos</h3>
                 <ul>
                     <li><a href="index-es.html">Inicio</a></li>
-                    <li><a href="about-es.html">Sobre nosotros</a></li>
+                    <li><a href="about-es.html">Sobre Nosotros</a></li>
                     <li><a href="collection-es.html">Colección</a></li>
                     <li><a href="events-es.html">Eventos</a></li>
                     <li><a href="contact-es.html">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-links">
-                <h3>Información</h3>
+                <h3>Informacíon</h3>
                 <ul>
-                    <li><a href="terms-of-service-es.html">Términos de servicio</a></li>
-                    <li><a href="privacy-policy-es.html">Política de Privacidad</a></li>
-                    <li><a href="legal-notice-es.html">Aviso Legal</a></li>
-                    <li><a href="store-locator-es.html">Localizador de Tiendas</a></li>
+                    <li><a href="terms-of-service-es.html"> Términos de servicio</a></li>
+                    <li><a href="privacy-policy-es.html"> Política de privacidad</a></li>
+                    <li><a href="legal-notice-es.html"> Aviso legal</a></li>
+                    <li><a href="store-locator-es.html"> Localizador de tiendas</a></li>
                 </ul>
-            </div>
-            <div class="footer-newsletter">
-                <h3>Mantente actualizado</h3>
-                <p>Suscríbete a nuestro boletín para novedades y ofertas exclusivas.</p>
-                <form>
-                    <input type="email" placeholder="Tu correo electrónico">
-                    <button type="submit">Suscribirse</button>
-                </form>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; <span id="current-year"></span> Shajú. Todos los derechos reservados.</p>
+            <p>&copy; 2025 Shaju. Todos los derechos reservados.</p>
         </div>
     </footer>
-    
     <script src="script.js"></script>
 </body>
 </html>
