--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -164,6 +164,9 @@
                     <a href="https://wa.me/c/51949917932" target="_blank" class="social-icon">
                         <i class="fab fa-whatsapp"></i>
                     </a>
+                    <a href="mailto:shaju.artesania@gmail.com" target="_blank" class="social-icon" aria-label="Email">
+                    <i class="fas fa-envelope"></i>
+                    </a>
                 </div>
             </div>
             <div class="footer-links">
@@ -184,14 +187,6 @@
                     <li><a href="legal-notice.html">Legal Notice</a></li>
                     <li><a href="store-locator.html"> Store Locator</a></li>
                 </ul>
-            </div>
-            <div class="footer-newsletter">
-                <h3>Stay Updated</h3>
-                <p>Subscribe to our newsletter for the latest updates and exclusive offers.</p>
-                <form>
-                    <input type="email" placeholder="Your Email">
-                    <button type="submit">Subscribe</button>
-                </form>
             </div>
         </div>
         <div class="footer-bottom">
