--- a/store-locator.html
+++ b/store-locator.html
@@ -98,6 +98,7 @@
             <p>&copy; <span id="current-year"></span> Shaju. All Rights Reserved.</p>
         </div>
     </footer>
+    <script src="script.js"></script>
  <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script>
