--- a/legal-notice.html
+++ b/legal-notice.html
@@ -110,41 +110,48 @@
 
   <!-- FOOTER -->
   <footer>
-    <div class="footer-content">
-      <div class="footer-logo">
-        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg"
-             alt="Shajú Logo" class="footer-logo-image">
-        <div class="social-icons">
-          <a href="https://instagram.com/shaju.artesania" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://facebook.com/shaju.artesania" target="_blank"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://wa.me/c/51949917932" target="_blank"><i class="fab fa-whatsapp"></i></a>
-          <a href="mailto:shaju.artesania@gmail.com" target="_blank" class="social-icon"><i class="fas fa-envelope"></i></a>
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Shaju Logo" class="footer-logo-image">
+                <div class="social-icons">
+                    <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://facebook.com/shaju.artesania" target="_blank" class="social-icon">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://wa.me/c/51949917932" target="_blank" class="social-icon">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                    <a href="mailto:shaju.artesania@gmail.com" target="_blank" class="social-icon" aria-label="Email">
+                    <i class="fas fa-envelope"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="footer-links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="collection.html">Collection</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h3>Information</h3>
+                <ul>
+                    <li><a href="terms-of-service.html">Terms of Service</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                    <li><a href="legal-notice.html">Legal Notice</a></li>
+                    <li><a href="store-locator.html"> Store Locator</a></li>
+                </ul>
+            </div>
         </div>
-      </div>
-      <div class="footer-links">
-        <h3>Quick Links</h3>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="collection.html">Collection</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-      <div class="footer-links">
-        <h3>Information</h3>
-        <ul>
-          <li><a href="terms-of-service.html">Terms of Service</a></li>
-          <li><a href="privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="legal-notice.html" >Legal Notice</a></li>
-          <li><a href="store-locator.html">Store Locator</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      <p>&copy; <span id="current-year"></span> Shajú Artesanía S.A. All Rights Reserved.</p>
-    </div>
-  </footer>
+        <div class="footer-bottom">
+            <p>&copy; <span id="current-year"></span> Shaju. All Rights Reserved.</p>
+        </div>
+    </footer>
 
   <script src="script.js"></script>
 </body>
