--- a/events-es.html
+++ b/events-es.html
@@ -33,8 +33,8 @@
       <!-- Selector de idioma -->
       <div class="language-selector">
         <select id="language-dropdown" onchange="changeLanguage(this.value, window.location.pathname.split('/').pop())">
-          <option value="en" selected>English</option>
-          <option value="es">Español</option>
+          <option value="en">English</option>
+          <option value="es" selected>Español</option>
         </select>
       </div>
     </div>
