--- a/privacy-policy-es.html
+++ b/privacy-policy-es.html
@@ -3,10 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shajú – Creaciones Artesanales</title>
+    <title>Shajú – Política de Privacidad</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>/* Center the article and constrain its width */
+#privacy-policy {
+  max-width: 700px;         /* don’t let it get wider than 700px */
+  margin: 2rem auto;        /* 2rem top/bottom, auto left/right to center */
+  padding: 1.5rem;          /* inner padding */
+  background: #fafafa;      /* subtle background */
+  border-radius: 8px;       /* rounded corners */
+  box-shadow: 0 2px 8px rgba(0,0,0,0.05); /* gentle lift */
+}
+
+/* Improve line length and spacing */
+#privacy-policy p,
+#privacy-policy ul,
+#privacy-policy li {
+  line-height: 1.65;
+  margin-bottom: 1rem;
+}
+
+/* Tweak headings */
+#privacy-policy h1 {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+}
+#privacy-policy h2 {
+  font-size: 1.25rem;
+  margin-top: 1.5rem;
+  margin-bottom: 0.75rem;
+}
+
+/* Style lists inside the article */
+#privacy-policy ul {
+  list-style: disc inside;
+}
+#privacy-policy ul li {
+  margin-left: 1rem;  /* indent bullets */
+}
+
+/* Responsive tweaks */
+@media (max-width: 480px) {
+  #privacy-policy {
+    padding: 1rem;
+    margin: 1rem auto;
+  }
+  #privacy-policy h1 {
+    font-size: 1.5rem;
+  }
+  #privacy-policy h2 {
+    font-size: 1.1rem;
+  }
+}
+</style>
 </head>
 <body>
     <!-- ENCABEZADO -->
@@ -28,7 +79,7 @@
                     </li>
                     <li><a href="collection-es.html">Colección</a></li>
                     <li><a href="events-es.html">Eventos</a></li>
-                    <li><a href="contact-es.html" class="active">Contacto</a></li>
+                    <li><a href="contact-es.html">Contacto</a></li>
                 </ul>
             </nav>
     
@@ -54,7 +105,7 @@
         <article id="privacy-policy">
             <p><em>Última actualización: 28 de julio de 2025</em></p>
 
-            <p>Bienvenido a <strong>[Nombre de tu sitio]</strong> (“nosotros”, “nuestro”). Tu privacidad es importante para nosotros. Esta Política de Privacidad explica cómo tratamos tu información cuando visitas o interactúas con nuestro sitio web.</p>
+            <p>Bienvenido a <strong>shaju-artesania.com</strong> (“nosotros”, “nuestro”). Tu privacidad es importante para nosotros. Esta Política de Privacidad explica cómo tratamos tu información cuando visitas o interactúas con nuestro sitio web.</p>
 
             <h2>1. No recopilamos datos personales</h2>
             <ul>
@@ -95,7 +146,7 @@
             <h2>8. Contáctanos</h2>
             <p>Si tienes preguntas o inquietudes, por favor escríbenos a <a href="mailto: shaju.artesania@gmail.com">shaju.artesania@gmail.com</a>.</p>
 
-            <p>Gracias por visitar <strong>[Nombre de tu sitio]</strong>. Respetamos tu privacidad y mantenemos las cosas simples: nunca recopilamos tus datos.</p>
+            <p>Gracias por visitar <strong>shaju-artesania.com</strong>. Respetamos tu privacidad y mantenemos las cosas simples: nunca recopilamos tus datos.</p>
         </article>
     </main>
     
@@ -144,5 +195,6 @@
         </div>
     </footer>
     <script src="script.js"></script>
+
 </body>
 </html>
