--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shaju - Artisanal Creations</title>
+    <title>Shaju - Privacy Policy</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -105,7 +105,7 @@
           <article id="privacy-policy">
                 <p><em>Last updated: July 28, 2025</em></p>
 
-                <p>Welcome to <strong>[Your Website Name]</strong> (“we,” “our,” “us”). Your privacy is important to us. This Privacy Policy explains how we handle your information when you visit or interact with our website.</p>
+                <p>Welcome to <strong>shaju-artesania.com</strong> (“we,” “our,” “us”). Your privacy is important to us. This Privacy Policy explains how we handle your information when you visit or interact with our website.</p>
 
                 <h2>1. No Collection of Personal Data</h2>
                 <ul>
@@ -146,7 +146,7 @@
                 <h2>8. Contact Us</h2>
                 <p>If you have questions or concerns about this policy, please contact us at <a href="shaju.artesania@gmail.com">shaju.artesania@gmail.com</a>.</p>
 
-                <p>Thank you for visiting <strong>[Your Website Name]</strong>. We respect your privacy and are committed to keeping it simple: we don’t collect any of your data—ever.</p>
+                <p>Thank you for visiting <strong>shaju-artesania.com</strong>. We respect your privacy and are committed to keeping it simple: we don’t collect any of your data—ever.</p>
             </article>
     
     </main>
@@ -154,6 +154,7 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Shaju Logo" class="footer-logo-image">
+                <p>Made with passion to create impact.</p>
                 <div class="social-icons">
                     <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
                         <i class="fab fa-instagram"></i>
