--- a/about.html
+++ b/about.html
@@ -154,6 +154,7 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Shaju Logo" class="footer-logo-image">
+                <p>Made with passion to create impact.</p>
                 <div class="social-icons">
                     <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
                         <i class="fab fa-instagram"></i>
@@ -187,6 +188,7 @@
                     <li><a href="legal-notice.html">Legal Notice</a></li>
                     <li><a href="store-locator.html"> Store Locator</a></li>
                 </ul>
+            </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; <span id="current-year"></span> Shaju. All Rights Reserved.</p>
