--- a/events.html
+++ b/events.html
@@ -68,6 +68,7 @@
     <div class="footer-content">
         <div class="footer-logo">
             <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Shaju Logo" class="footer-logo-image">
+            <p>Made with passion to create impact.</p>
             <div class="social-icons">
                 <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
                     <i class="fab fa-instagram"></i>
