--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -107,7 +107,7 @@
       <p>You agree to defend, indemnify, and hold harmless Shajú and its affiliates from any claims, damages, or expenses (including legal fees) arising out of your breach of these Terms or your misuse of the Site.</p>
 
       <h2>8. Governing Law & Dispute Resolution</h2>
-      <p>These Terms are governed by the laws of [Your State/Country]. Any dispute shall be resolved exclusively in the courts of [Your Jurisdiction].</p>
+      <p>These Terms are governed by the laws of Peru. Any dispute shall be resolved exclusively in the courts of Peru.</p>
 
       <h2>9. Contact Us</h2>
       <p>If you have questions about these Terms, please email us at <a href="mailto: shaju.artesania@gmail.com">shaju.artesania@gmail.com</a>.</p>
@@ -119,7 +119,7 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Shaju Logo" class="footer-logo-image">
-                <p>Hecho con pasión para generar un impacto</p>
+                <p>Made with passion to create impact</p>
                 <div class="social-icons">
                     <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
                         <i class="fab fa-instagram"></i>
