--- a/events-es.html
+++ b/events-es.html
@@ -57,6 +57,13 @@
 
     <div id="loading-indicator" class="loading-indicator">Cargando eventos...</div>
     <div id="error-message" class="error-message">Error al cargar los eventos. Por favor, inténtalo de nuevo.</div>
+    <section class="custom-orders">
+      <div class="find-retailers">
+          <h3>Registrarse para un taller</h3>
+          <p>Nuestros talleres prácticos te guían paso a paso mientras creas tus propias piezas junto a nuestros artesanos. La inscripción está disponible para grupos de cuatro personas o más.</p>
+          <a href="https://wa.me/c/51949917932" class="btn">Inscríbete enviando un mensaje por WhatsApp. </a>
+      </div>
+  </section>
   </main>
   <footer>
         <div class="footer-content">
