--- a/legal-notice.html
+++ b/legal-notice.html
@@ -76,31 +76,32 @@
       <p><em>Last updated: July 28, 2025</em></p>
 
       <h2>1. Publisher</h2>
-      <p><strong>Shajú Artesanía S.A.</strong><br>
-      123 Amazon Ave, Lima, Peru<br>
-      Registered in the Commercial Registry of Lima, RUC 20301234567</p>
+      <p><strong>SHAJU INVESTMENTS EIRL</strong><br>
+      Calle Morona 586, Iquitos 16001<br>
+      Registered in the Commercial Registry of Lima, RUC 20606588110</p>
 
       <h2>2. Responsible Party</h2>
-      <p>Site Director: María García<br>
+      <p>Site Director: Olga Vidurrizaga<br>
       Contact: <a href="mailto:shaju.artesania@gmail.com">shaju.artesania@gmail.com</a><br>
-      Phone: +51 9 1234 5678</p>
+      Phone: +51 949 917 932</p>
 
       <h2>3. Hosting Provider</h2>
-      <p>Hosted by Vercel Inc.<br>
-      340 S Lemon Ave #4133, Walnut, CA 91789, USA<br>
-      <a href="https://vercel.com/legal/privacy-policy" target="_blank">Vercel Privacy Policy</a></p>
+      <p>Hosted by GitHub Inc.<br>
+      88 Colin P. Kelly Jr. Street, San Francisco, CA 94107, USA<br>
+      <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement" target="_blank">GitHub Privacy Statement</a></p>
+
 
       <h2>4. Intellectual Property</h2>
-      <p>All content on this Site—including text, images, logos, designs, and code—is owned or licensed by Shajú Artesanía S.A. and protected by international copyright and trademark laws. Unauthorized use, reproduction, or distribution is prohibited.</p>
+      <p>All content on this Site—including text, images, logos, designs, and code—is owned or licensed by SHAJU INVESTMENTS EIRL and protected by international copyright and trademark laws. Unauthorized use, reproduction, or distribution is prohibited.</p>
 
       <h2>5. Disclaimer</h2>
-      <p>The information on this Site is provided “as is” for general informational purposes only. Shajú Artesanía S.A. makes no warranties, express or implied, regarding accuracy or completeness.</p>
+      <p>The information on this Site is provided “as is” for general informational purposes only. SHAJU INVESTMENTS EIRL makes no warranties, express or implied, regarding accuracy or completeness.</p>
 
       <h2>6. Limitation of Liability</h2>
-      <p>In no event shall Shajú Artesanía S.A. be liable for any indirect, incidental, or consequential damages arising from your use of the Site or reliance on its content.</p>
+      <p>In no event shall SHAJU INVESTMENTS EIRL be liable for any indirect, incidental, or consequential damages arising from your use of the Site or reliance on its content.</p>
 
       <h2>7. Applicable Law & Jurisdiction</h2>
-      <p>These terms are governed by the laws of the Republic of Peru. Any dispute shall be subject to the exclusive jurisdiction of the courts of Lima, Peru.</p>
+      <p>These terms are governed by the laws of the Republic of Peru. Any dispute shall be subject to the exclusive jurisdiction of the courts of Peru.</p>
 
       <h2>8. Contact Information</h2>
       <p>For legal inquiries, please contact us at:<br>
